--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 actix-web = "4.11.0"
 # askama_actix = "0.14.0"
 # askama = "0.12.1"
-inventory_core = { path = "../core", package = "core" }
+# inventory_core = { path = "../core", package = "core" }
 serde = { version = "1.0", features = ["derive"] }
 rust-embed = "8.0.0"
 
